# SEC03A_SoftwareEngineeringForInternetApplications

./: .gitignore  README.md  pyproject.toml
Blog/: asgi.py  settings.py  urls.py
BlogApp/: admin.py  forms.py  models.py  streams.py  urls.py  views.py
BlogApp/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_alter_post_creation_date.py  0004_alter_post_content.py  0005_alter_post_content.py  0006_alter_post_title.py  0007_bookmark.py  0008_alter_post_creation_date_comment.py  0009_remove_comment_text_comment_content.py  0010_alter_post_creation_date.py  0011_alter_comment_content.py  0012_alter_post_creation_date.py
BlogApp/templates/: login.html  post-bookmark-list.html  post-create.html  post-detail.html  post-list.html  post-my-list.html  post-search.html  post-update.html  signup.html  user-list.html
BlogApp/templates/components/: base.html  comment.html  detail-post.html  header.html  messages.html  modal-logout.html  modal-post-delete.html  pagination.html  post.html  user.html
BlogApp/templatetags/: dict_filter.py
static/css/: base.css  header.css  post.css  user.css
static/js/: post-detail.js  post.js  post_search.js
